--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>I love you,</p>
-                    <p>most ardently</p>
+                    <p>Ты самое милое и самое лучшее,что со мной происходило,</p>
+                    <p>С любовью от вишенки❤️</p>
                 </div>
             </div>
             <div class="hearts">
@@ -282,8 +282,8 @@
         </div>
     </div>
     <div class="reset">
-        <button id="open">Open Envelope</button>
-        <button id="reset">Close Envelope</button>
+        <button id="open">Открыть конверт</button>
+        <button id="reset">Закрыть конверт</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
