--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вопрос на миллион</title>
+    <title>Валентинка</title>
     <style>
         body {
             margin: 0;
@@ -49,10 +49,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ты любишь меня?</h1>
+        <h1>Нажми на сердечко</h1>
         <div class="buttons">
-            <button id="yesBtn">ДА</button>
-            <button id="noBtn">НЕТ</button>
+            <button id="yesBtn">❤️</button>
+            <button id="noBtn">Не нажму</button>
         </div>
     </div>
 
