--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
 <body>
     <div class="error-container">
         <h1>404</h1>
-        <p>💔💔💔💔</p>
+        <p>ну ты вонючка, нажмииии на сердечко😭😭😭😭</p>
         <button class="back-btn" onclick="window.history.back()">Вернуться назад</button>
     </div>
 </body>
