--- a/valentine.html
+++ b/valentine.html
@@ -221,7 +221,7 @@
     <div class="container">
         <div class="heart"></div>
         <div class="message">С Днём Святого Валентина!</div>
-        <div class="sub-message">Ты клубничка моя - самое прекрасное, милое и доброе что есть в моей жизни ❤️</div>
+        <div class="sub-message">Ты клубничка моя - самое прекрасное, милое и доброе что есть в моей жизни и всегда будешь что бы не случилось ❤️❤️❤️</div>
     </div>
 
     <script>
