--- a/valentine.html
+++ b/valentine.html
@@ -379,5 +379,8 @@
         setInterval(createMusicNote, 5000);
         setInterval(createButterfly, 8000);
     </script>
+<audio>
+<source src="music.mp3">
+</audio>
 </body>
 </html>
